# fluid-dynamics1

./: .gitignore  BUILD.md  CMakeLists.txt  CONFIGSYSTEM.md  Makefile  NOTICE.TXT  README.md  README_CONFIG.md  build.sh  check_cuda_compatibility.bat  cnavier  compile_shaders.sh  config_default.txt  config_high_re.txt  imgui.ini  shaderCompile.sh
.cache/clangd/index/: cgltf.h.AB5B3313C345D20F.idx  execPath.cpp.0914B28537F4DDA8.idx  execPath.cpp.2A08727AB2369B4C.idx  execPath.cpp.CD49DFB67E2B87A9.idx  execPath.h.483BB826A44BBDCD.idx  execPath.h.91C062FD14DA5A44.idx  execPath.h.A7A75D37B9F23869.idx  main.cpp.9C9D7B9A776858BB.idx  main.cpp.C0B32D26F78F402A.idx  main.cpp.FAEDF105D90DE5C8.idx  stb_image.h.056F13F0CE3DDCB4.idx  vk_desriptors.cpp.119B7D5322CD838B.idx  vk_desriptors.cpp.680E4E73E8A8C7C3.idx  vk_desriptors.cpp.B25E4871250904A8.idx  vk_desriptors.h.330745A26BE94572.idx  vk_desriptors.h.8D78F5DF93D9978C.idx  vk_desriptors.h.A44CA0869D4C4317.idx  vk_engine.cpp.271F81B1801732C2.idx  vk_engine.cpp.42212ED92642F018.idx  vk_engine.cpp.EA2F2C055BD9368E.idx  vk_engine.h.CA922AD4C1B51804.idx  vk_engine.h.DEA4249F0BC7214E.idx  vk_engine.h.EE3B65A824475ED1.idx  vk_images.cpp.2E77A99B5F1B03B0.idx  vk_images.cpp.3AFA7871D7DBD593.idx  vk_images.cpp.7A68FE13D17E9B34.idx  vk_images.h.884A781E4586F06C.idx  vk_images.h.BA93B8661E1188A6.idx  vk_images.h.D4E81F5FE70923F0.idx  vk_initializers.cpp.0A4512F5E09636D8.idx  vk_initializers.cpp.A38BC53D4CC19CAC.idx  vk_initializers.cpp.D984C979B9A74830.idx  vk_initializers.h.4DB58E9EE759F591.idx  vk_initializers.h.99D2CC5B6A1E1CC4.idx  vk_initializers.h.F4E296F4807A04A7.idx  vk_loader.cpp.7A6C0A51D6C053DC.idx  vk_loader.h.8E81469579935603.idx  vk_mem_alloc.h.347C3D2B7C5F6515.idx  vk_mem_alloc.h.5E64CCE6E3D1B574.idx  vk_mem_alloc.h.DD99899C23EB73C4.idx  (+9 more)
CS Project 2-2/: Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  CS Project 2-2.sln  ShapesEditor.csproj  ShapesRuntime.csproj
CS Project 2-2/Assets/Scenes/: SampleScene.unity
CS Project 2-2/Assets/Scripts/: FluidSimulation.cs
CS Project 2-2/ProjectSettings/: ProjectSettings.asset
FluidSim/: FluidSim.csproj  FluidSim.sln  Program.cs
Release/: config.txt
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cnavier.sln  cnavier.vcxproj  cnavier.vcxproj.filters
configs/: fast_test.txt  high_res.txt  no_obstacle.txt  off_center.txt  stable.txt
data/: predicted_output.npy
data/inputs/: input_0000.npy  input_0001.npy  input_0002.npy  input_0003.npy  input_0004.npy  input_0005.npy  input_0006.npy  input_0007.npy  input_0008.npy  input_0009.npy  input_0010.npy  input_0011.npy  input_0012.npy  input_0013.npy  input_0014.npy  input_0015.npy  input_0016.npy  input_0017.npy  input_0018.npy
data/targets/: target_0000.npy  target_0001.npy  target_0002.npy  target_0003.npy  target_0004.npy  target_0005.npy  target_0006.npy  target_0007.npy  target_0008.npy  target_0009.npy  target_0010.npy  target_0011.npy  target_0012.npy  target_0013.npy  target_0014.npy  target_0015.npy  target_0016.npy  target_0017.npy  target_0018.npy
experiments_materials/experiment1-performanceHPC/: experiment1standart.txt
include/: app.h  commandBuffer.h  config.h  execPath.h  fluid.h  fluidRenderer.h  fluidSim.h  fluiddyn.h  gl_solver.h  linearalg.h  object.h  opengl_loader.h  poisson.h  shader.h  utils.h  vk_desriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_pipelines.h  vk_types.h  vulkan_solver.h
include/vk_video/: vulkan_video_codec_av1std.h  vulkan_video_codec_h264std.h  vulkan_video_codec_h265std.h  vulkan_video_codecs_common.h
output/: object-1-19.vtk  object-1-3.vtk  object-1-67.vtk  vorticity-1-0.vtk  vorticity-1-12.vtk  vorticity-1-16.vtk  vorticity-1-20.vtk  vorticity-1-24.vtk  vorticity-1-28.vtk  vorticity-1-32.vtk  vorticity-1-36.vtk  vorticity-1-4.vtk  vorticity-1-40.vtk  vorticity-1-44.vtk  vorticity-1-48.vtk  vorticity-1-52.vtk  vorticity-1-56.vtk  vorticity-1-60.vtk  vorticity-1-64.vtk  vorticity-1-68.vtk  vorticity-1-72.vtk  vorticity-1-76.vtk  vorticity-1-8.vtk  x-velocity-1-1.vtk  x-velocity-1-13.vtk  x-velocity-1-17.vtk  x-velocity-1-21.vtk  x-velocity-1-25.vtk  x-velocity-1-29.vtk  x-velocity-1-33.vtk  x-velocity-1-37.vtk  x-velocity-1-41.vtk  x-velocity-1-45.vtk  x-velocity-1-49.vtk  x-velocity-1-5.vtk  x-velocity-1-53.vtk  x-velocity-1-57.vtk  x-velocity-1-61.vtk  x-velocity-1-65.vtk  x-velocity-1-69.vtk  (+23 more)
output/logs/: testRunNOOMP.txt  testRunNOOMPHIGHRES.txt  testRunOMP.txt  testRunOMPHIGHRES.txt  test_runopenmp8.txt
shaders/: advectDiffuse.comp  colored_triangle.vert  colored_triangle_mesh.vert  compFluid.comp  gradient.comp  gradient_color.comp  navier.comp  poisson.comp  poissonSOR.comp  poisson_sor.comp  pressureSOR.comp  sky.comp  velocityFromPsi.comp  vorticity.comp
src/: commandBuffer.c  config.c  cuda_kernels.cu  debug.c  execPath.cpp  finitediff.c  fluid.c  fluid_net_best.pt  fluid_net_script.pt  fluiddyn.c  fluidsim.c  fragmentShaderSource.h  gl_dummy.c  linearalg.c  main.c  main.cpp  neuralNetwork.py  object.c  poisson.c  renderer.c  shader.c  utils.c  vertexShaderSource.h  vk_desriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_pipelines.cpp  vulkan.c  vulkan_dummy.c  window.c
src/NN/: dataGen.py  evaluateNN.py  fluid_pde_ai.pt  neuralNetwork.py  trainFluidModel.py
src/ai_data/: obj_t110.csv  u_t0.csv  u_t10.csv  u_t100.csv  u_t110.csv  u_t120.csv  u_t130.csv  u_t140.csv  u_t150.csv  u_t160.csv  u_t170.csv  u_t180.csv  u_t190.csv  u_t20.csv  u_t30.csv  u_t40.csv  u_t50.csv  u_t60.csv  u_t70.csv  u_t80.csv  u_t90.csv  v_t0.csv  v_t10.csv  v_t100.csv  v_t110.csv  v_t120.csv  v_t130.csv  v_t140.csv  v_t150.csv  v_t160.csv  v_t170.csv  v_t180.csv  v_t190.csv  v_t20.csv  v_t30.csv  v_t40.csv  v_t50.csv  v_t60.csv  v_t70.csv  v_t80.csv  (+21 more)
src/gl/: gl_solver.c
src/io/: data_writer.cpp
src/solver/: fluid_solver.cpp
src/vulkan/: poisson_compute.comp  poisson_sor_compute.comp  vulkan_solver.c
test/: windTunelConf
(+23 files in other folders)
